[업데이트] 접속내용

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+    <div class="addPeople">
+        <h2>OOO님이 접속하셨습니다.</h2>
+    </div>
+
     <div class="talkBox">
 
         <div class="tbx"></div>
